another update for test of continuous deployment

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="navbar-wrapper">
       <div class="container">
-          <h1>Azure App Service - Sample Static HTML Site -- Another Update</h1>
+          <h1>Azure App Service - Sample Static HTML Site -- Another Update Test with continuous deployment</h1>
           <hr/>
       </div>
     </div>
